--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ body {
 
 .banner {
 	padding: 89px 67% 75px 59px;
+	margin-bottom: 32px;
 	text-transform: uppercase;
 	background: no-repeat url('img/banner.jpg');
 	background-size: cover;
@@ -184,6 +185,244 @@ body {
 	background: #fff;
 }
 
+.products {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 52px;
+}
+
+.products__title {
+	align-self: center;
+	margin-bottom: 19px;
+	font-size: 22px;
+	line-height: 21px;
+	text-transform: uppercase;
+}
+
+.products-wrapper {
+	display: flex;
+	justify-content: space-between;
+	padding-left: 13px;
+	padding-right: 19px;
+}
+
+.products-item {
+	position: relative;
+	width: 20%;
+}
+
+.products-item:after {
+	position: absolute;
+	left: 118%;
+	top: 40px;
+	display: block;
+	content: '';
+	width: 1px;
+	height: 100px;
+	background: rgba(0, 0, 0, 0.2)
+}
+
+.products-item:last-child:after {
+	display: none;
+}
+
+.products-item:hover {
+	cursor: pointer;
+}
+
+.products-item__img {
+	display: block;
+	width: 94%;
+	margin: 0 auto 28px auto;
+	padding-left: 7px;
+}
+
+.products-item__name {
+	font-size: 12px;
+	line-height: 11px;
+	margin: 0 0 9px 0;
+}
+
+.products-item__cost {
+	font-size: 14px;
+	line-height: 13px;
+	font-weight: bold;
+	margin: 0;
+}
+
+.products-item__colors {
+	position: absolute;
+	bottom: 1px;
+	left: 76%;
+	display: flex;
+	align-items: center;
+}
+
+.products-item__colors_1,
+.products-item__colors_2,
+.products-item__colors_3,
+.products-item__colors_4 {
+	width: 7px;
+	height: 7px;
+	border-radius: 50%;
+	margin-right: 8px;
+}
+
+.products-item__colors_1 {
+	background: #C4C4C4;
+}
+
+.products-item__colors_2 {
+	width: 9px;
+	height: 9px;
+}
+
+.products-item__colors_4 {
+	margin-right: 0;
+	background: #FDB431;
+}
+
+.products-item:first-child .products-item__colors_2 {
+	background: #0E1211;
+}
+
+.products-item:first-child .products-item__colors_3 {
+	background: #B62E3C;
+}
+
+.products-item:nth-child(2) .products-item__colors_2 {
+	background: #E29D69;
+}
+
+.products-item:nth-child(2) .products-item__colors_3 {
+	background: #B62E3C;
+}
+
+.products-item:nth-child(3) .products-item__colors_2 {
+	background: #762E31;
+}
+
+.products-item:nth-child(3) .products-item__colors_3 {
+	background: #41479B;
+}
+
+.products-item:last-child .products-item__colors_2 {
+	background: #257DA9;
+}
+
+.products-item:last-child .products-item__colors_3 {
+	background: #B62E3C;
+}
+
+.main {
+	display: flex;
+  justify-content: space-between;
+	background: #000;
+	color: #fff;
+	padding: 68px 45px 64px 33px;
+}
+
+.player-wrapper {
+	position: relative;
+	box-sizing: border-box;
+	width: 67.6%;
+}
+
+.main__img {
+	width: 100%;
+}
+
+
+.play-button {
+	position: absolute;
+	top: 43.5%;
+	left: 46.5%;
+	width: 47px;
+	height: 47px;
+	background: #fff;
+	border-radius: 50%;
+	box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.2);
+	transition: opacity .5s;
+}
+
+.play-button:hover {
+	cursor: pointer;
+	opacity: .5;
+}
+
+.play-button__triangle {
+	position: absolute;
+	top: 40%;
+	right: 24%;
+	width: 0;
+	height: 0;
+	border: 5px solid transparent; 
+	border-left: 10px solid rgba(0, 0, 0, 0.5);
+}
+
+.main-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	box-sizing: border-box;
+	width: 28%;
+}
+
+.main__title {
+	margin: 0;
+	margin-top: -2px;
+	font-size: 22px;
+	line-height: 27px;
+	text-transform: uppercase;
+}
+
+.main__text {
+	margin-bottom: 20px;
+	font-size: 14px;
+	line-height: 18px;
+}
+
+.main__link {
+	align-self: flex-start;
+	position: relative;
+	padding-right: 52px;
+	font-size: 12px;
+	line-height: 11px;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-decoration: none;
+	color: #fff;
+	transition: opacity .5s;
+}
+
+.main__link::before {
+	position: absolute;
+	right: 2px;
+	top: 50%;
+	display: block;
+	content: '';
+	width: 4px;
+	height: 4px;
+	border-top: 1px solid #fff;
+	border-right: 1px solid #fff;
+	transform: rotate(45deg) translateY(-60%);
+}
+
+.main__link::after {
+	position: absolute;
+	right: 0;
+	top: 50%;
+	display: block;
+	content: '';
+	width: 42px;
+	height: 1px;
+	background: #fff;
+}
+
+.main__link:hover {
+	opacity: .5;
+}
+
 
 @media (max-width: 1024px) {
 
@@ -224,6 +463,7 @@ body {
 
 	.banner {
     padding: 75px 67% 68px 53px;
+    margin-bottom: 47px;
 	}
 
 	.banner__title {
@@ -238,9 +478,92 @@ body {
 		width: 45px;
 	}
 
+	.products {
+		margin-bottom: 78px;
+	}
+
+	.products-wrapper {
+		padding-right: 17px;
+		padding-left: 11px;
+	}
+
+	.products-item:after {
+		top: 35px;
+		height: 101px;
+	}
+
+	.products__title {
+		margin-bottom: 25px;
+	}
+
+	.products-item__img {
+		width: 97%;
+		margin-bottom: 35px;
+		padding-left: 8px;
+	}
+
+	.products-item__colors {
+		bottom: 2px;
+	}
+
+	.products-item__colors_1,
+	.products-item__colors_2,
+	.products-item__colors_3,
+	.products-item__colors_4 {
+		width: 6px;
+		height: 6px;
+	}
+
+	.products-item__colors_2 {
+		width: 8px;
+		height: 8px;
+	}
+
+	.main {
+		padding: 59px 35px 55px 30px;
+	}
+
+	.player-wrapper {
+		width: 66.9%;
+	}
+
+	.main-wrapper {
+		width: 28.7%;
+	}
+
+	.main__title{
+		margin-bottom: 9px;
+	}
+
+	.main__text {
+		margin-top: 0;
+		margin-bottom: 22px;
+		font-size: 13px;
+		line-height: 16px;
+	}
+
+	.main__link {
+		position: relative;
+		bottom: 5px;
+		padding-right: 59px;
+	}
+
+	.main__link:after {
+		width: 44px;
+	}
+
+	.play-button {
+		width: 42px;
+		height: 42px;
+	}
+
+	.play-button__triangle {
+		border-left: 9px solid rgba(0, 0, 0, 0.5);
+	}
+
 }
 
-@media (max-width: 900px) {
+@media (max-width: 910px) {
 
 	.logo {
 		margin-right: 15px;
@@ -252,6 +575,15 @@ body {
 
 	.toolbox__item {
 		margin-right: 15px;
+	}
+
+	.main-wrapper {
+		padding-top: 10px;
+	}
+
+	.products-item__name {
+		font-size: 10px;
+		line-height: 8px;
 	}
 
 }
@@ -350,6 +682,7 @@ body {
 
 	.banner {
 		padding: 119px 49% 84px 45px;
+		margin-bottom: 40px;
 		background-size: cover;
 		background-position: 17%;
 	}
@@ -379,6 +712,145 @@ body {
 		height: 2px;
 	}
 
+	.products {
+		margin-bottom: 83px;
+	}
+
+	.products-wrapper {
+		padding-right: 10%;
+		padding-left: 11%;
+	}
+
+	.products__title {
+		font-size: 30px;
+		line-height: 28px;
+		margin-bottom: 33px;
+		padding-right: 16px;
+	}
+
+	.products-item:nth-child(3),
+	.products-item:last-child {
+		display: none;
+	}
+
+	.products-item {
+		width: 43%;
+		padding: 0;
+		box-sizing: border-box;
+	}
+
+
+	.products-item:after {
+		display: none;
+	}
+
+	.products-item__img {
+		width: 90%;
+		margin: 0 0 30px 0;
+		padding-left: 11px;
+	}
+
+	.products-item__name {
+		font-size: 20px;
+		line-height: 19px;
+		margin-bottom: 18px;
+	}
+
+	.products-item__cost {
+		font-size: 25px;
+		line-height: 24px;
+	}
+
+	.products-item__colors {
+		bottom: 3px;
+		left: 60%;
+	}
+
+	.products-item:first-child .products-item__colors {
+		left: 60%;
+	}
+
+	.products-item:nth-child(2) .products-item__colors {
+		left: 65%;
+	}
+
+	.products-item__colors_1,
+	.products-item__colors_2,
+	.products-item__colors_3,
+	.products-item__colors_4 {
+		width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		margin-right: 5px;
+	}
+
+	.main {
+		flex-direction: column-reverse;
+	}
+
+	.player-wrapper {
+		width: 100%;
+	}
+
+	.main {
+		position: relative;
+		padding: 43px 29px 55px 34px;
+		
+	}
+
+	.main:before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		display: block;
+		content: '';
+		width: 100%;
+		height: 35px;
+		background: #000;
+		transform: skewY(2.6deg);
+		transform-origin: right;
+	}
+
+	.main__img {
+		width: 99%;
+	}
+
+	.play-button {
+		top: 43.4%;
+		left: 46%;
+		width: 50px;
+		height: 50px;
+	}
+
+	.play-button__triangle {
+		top: 40%;
+		right: 26%;
+		border-left: 10px solid rgba(0, 0, 0, 0.5);
+	}
+
+	.main-wrapper {
+		width: 100%;
+		margin-bottom: 8px;
+		padding-right: 5px;
+	}
+
+	.main__title {
+		margin-bottom: 15px;
+		font-size: 30px;
+		line-height: 37px;
+		text-align: center;
+	}
+
+	.main__text {
+		font-size: 20px;
+		line-height: 25px;
+		text-align: center;
+	}
+
+	.main__link {
+		display: none;
+	}
+
 }
 
 @media (max-width: 650px) {
@@ -386,6 +858,73 @@ body {
 	.banner {
     padding-right: 30%;
     background-position: 35%;
+	}
+
+	.play-button {
+		width: 42px;
+		height: 42px;
+	}
+
+	.play-button__triangle {
+		border-left: 9px solid rgba(0, 0, 0, 0.5);
+	}
+
+}
+
+@media (max-width: 540px) {
+
+	.products__title {
+		font-size: 26px;
+    line-height: 24px;
+	}
+
+	.products-item__name {
+		font-size: 12px;
+    line-height: 11px;
+	}
+
+	.products-item__cost{
+		font-size: 16px;
+    line-height: 15px;
+	}
+
+	.products-item__colors_1,
+	.products-item__colors_2,
+	.products-item__colors_3,
+	.products-item__colors_4 {
+		width: 8px;
+		height: 8px;
+		border-radius: 50%;
+		margin-right: 5px;
+	}
+
+	.main__title {
+		font-size: 25px;
+		line-height: 27px;
+	}
+
+	.main__text {
+		font-size: 16px;
+		line-height: 21px;
+	}
+
+}
+
+@media (max-width: 480px) {
+
+	.play-button {
+		top: 42.4%;
+		left: 45.7%;
+		width: 21px;
+		height: 21px;
+		box-shadow: 0 0 0 5px rgba(255, 255, 255, 0.2);
+	}
+
+	.play-button__triangle {
+		top: 42%;
+		right: 27%;
+		border: 2px solid transparent; 
+		border-left: 4px solid rgba(0, 0, 0, 0.5);
 	}
 
 }
@@ -418,6 +957,7 @@ body {
 
 	.banner {
 		padding: 68px 45% 37px 48px;
+		margin-bottom: 20px;
 		background-size: cover;
 		background-position: 19%;
 	}
@@ -447,6 +987,97 @@ body {
 		height: 2px;
 	}
 
+	.products {
+		margin-bottom: 90px;
+	}
+
+	.products-wrapper {
+    padding-right: 11%;
+    padding-left: 17%;
+	}
+
+	.products__title {
+		padding-right: 10px;
+		margin-bottom: 3px;
+		font-size: 20px;
+		line-height: 19px;
+	}
+
+	.products-item:nth-child(2) {
+		display: none;
+	}
+
+	.products-item {
+		width: 100%;
+	}
+
+	.products-item__img {
+		width: 163px;
+		padding-left: 45px;
+		margin-bottom: 29px;
+	}
+
+	.products-item__name {
+		margin-bottom: 7px;
+		font-size: 15px;
+		line-height: 14px;
+	}
+
+	.products-item__cost {
+		font-size: 20px;
+		line-height: 19px;
+	}
+
+	.products-item:first-child .products-item__colors {
+		bottom: 0;
+		left: auto;
+		right: 0;
+	}
+
+	.products-item__colors_1,
+	.products-item__colors_2,
+	.products-item__colors_3,
+	.products-item__colors_4 {
+		width: 15px;
+		height: 15px;
+		border-radius: 50%;
+		margin-right: 5px;
+	}
+
+	.main {
+		padding: 15px 0 55px 0;
+	}
+
+	.main:before {
+		height: 17px;
+	}
+
+	.main-wrapper {
+		width: 75%;
+		margin: 0 auto 8px auto;
+		padding-right: 0;
+	}
+
+	.main__title {
+		max-width: 250px;
+		margin: 0 auto 16px auto;
+		font-size: 20px;
+		line-height: 25px;
+	}
+
+	.main__text {
+		margin-bottom: 19px;
+		font-size: 14px;
+		line-height: 18px;
+	}
+
+	.player-wrapper {
+		width: 76.5%;
+		margin: auto;
+		box-sizing: content-box;
+		padding-left: 4px;
+	}
+
 }
 
 @media (max-width: 320px) {
@@ -458,6 +1089,24 @@ body {
 	.banner {
     padding: 66px 45% 37px 20px;
     background-position: 24%;
+	}
+
+	.products-wrapper {
+    padding-right: 4%;
+    padding-left: 11%;
+	}
+
+	.main-wrapper {
+		width: 88%;
+	}
+
+	.player-wrapper {
+		width: 89.5%;
+		padding-left: 3px;
+	}
+
+	.play-button {
+		left: 46.2%;
 	}
 
 }
